[package]
name = "test-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
async-trait = "0.1.73"
chrono = "0.4.31"
chrono-tz = "0.8.3"
config = "0.13.3"
csv = "1.2.2"
env_logger = "0.10.0"
log = "0.4.20"
memmap2 = "0.7.1"
rayon = "1.8.0"
reqwest = { version = "0.11.20", features = ["blocking"] }
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
statistical = "1.0.0"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
zip = "0.6.6"
