[package]
name = "backtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.5.1"
actix-web-lab = "0.20.2"
async-trait = "0.1.73"
cached = { version = "0.46.0", features = ["async_tokio_rt_multi_thread"] }
chrono = "0.4.37"
chrono-tz = "0.8.3"
config = "0.13.3"
csv = "1.2.2"
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures = "0.3.28"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
log = "0.4.20"
memmap2 = "0.7.1"
plotly = { version = "0.8.4", features = ["kaleido"] }
rayon = "1.8.0"
reqwest = { version = "0.11.20", features = ["blocking"] }
serde = {version = "1.0.188", features = ["derive"]}
serde-aux = "4.2.0"
serde_json = "1.0.107"
sha3 = "0.10.8"
sqlx = { version = "0.7.4", features = ["sqlite"] }
sqlx-cli = { version = "0.7.4", features = ["sqlite"] }
statistical = "1.0.0"
strum = { version = "0.25.0", features = ["derive"] }
tera = "1.19.1"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
zip = "0.6.6"
